# ESP32C3-voice-test

./: .gitignore  CMakeCache.txt  CMakeLists.txt  json2c.py  nomi.code-workspace  partitions.csv
Doc/: LottiePlayerGuide.md  app_logic.md  信号振铃.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/Lottie/: RobotListening.h  angry.h  angry2.h  maren.h  moneyface.h  smile.h
main/app/include/: app_events.h  app_imu.h  app_logic.h  app_lottie.h  app_motion.h  app_statemachine.h  app_ui.h
main/app/src/: app_events.c  app_imu.c  app_logic.c  app_lottie.c  app_motion.c  app_statemachine.c  app_ui.c
main/bsp/include/: bsp_i2c.h  bsp_iis_MAX98357A.h  bsp_lcd.h  bsp_lvgl.h  bsp_mpu6050.h
main/bsp/src/: bsp_i2c.c  bsp_iis_MAX98357A.c  bsp_lcd.c  bsp_lvgl.c  bsp_mpu6050.c
main/service/include/: app_init.h  audio_player.h  service_imu.h  wav_parser.h
main/service/src/: app_init.c  audio_player.c  service_imu.c  wav_parser.c
wokwi/: diagram.json  wokwi.toml
